rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@snuba-uptime-results-UptimeMonitorChecksProcessor-snuba-uptime-results__1__timeout.json.snap
---
source: src/processors/mod.rs
description: "{\n  \"guid\": \"54afc7ed9c53491481919c931f75bae1\",\n  \"subscription_id\": \"5421b5df80744113a6b57014f01a3a42\",\n  \"status\": \"failure\",\n  \"status_reason\": {\n    \"type\": \"timeout\",\n    \"description\": \"Check timed out\"\n  },\n  \"trace_id\": \"947efba02dac463b9c1d886a44bafc94\",\n  \"span_id\": \"58e84098e63f42e1\",\n  \"scheduled_check_time_ms\": 1717614062978,\n  \"actual_check_time_ms\": 1717614068008,\n  \"duration_ms\": 100,\n  \"request_info\": {\n    \"request_type\": \"HEAD\",\n    \"http_status_code\": null\n  },\n  \"organization_id\": 123,\n  \"project_id\": 456,\n  \"retention_days\": 90,\n  \"region_slug\": \"us-east-1\"\n}\n"
expression: snapshot_payload
---
[
  {
    "check_status": "failure",
    "check_status_reason": "timeout",
    "duration": 100,
    "environment": null,
    "http_status_code": null,
    "offset": 1,
    "organization_id": 123,
    "partition": 0,
    "project_id": 456,
    "region_slug": "us-east-1",
    "retention_days": 90,
    "scheduled_check_time": 1717614062978.0,
    "timestamp": 1717614068008.0,
    "trace_id": "947efba0-2dac-463b-9c1d-886a44bafc94",
    "uptime_check_id": "54afc7ed-9c53-4914-8191-9c931f75bae1",
    "uptime_subscription_id": "5421b5df-8074-4113-a6b5-7014f01a3a42"
  }
]
